# AI-Arochestrator-2

./: .gitignore  Makefile  README.md  ai_orchestrator.db  alembic.ini  alert.rules.yml  alert_payload.json  alertmanager.yml  ci_migrations_test.db  docker-compose.yml  dummy_alert.json  dummy_alert_retry.json  prometheus.yml
backend/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend/.checkpoints/: workflow_03f1631bb810.json  workflow_069284f808db.json  workflow_0a844b440d54.json  workflow_0d1164f1fba7.json  workflow_0ff5fc82ac7d.json  workflow_1079f72d414e.json  workflow_1318f187617e.json  workflow_145ad4a01a63.json  workflow_15163cc44815.json  workflow_16b875dbd0ee.json  workflow_1c8a18844283.json  workflow_1f2afdde35a3.json  workflow_20d0f9ef89cb.json  workflow_299facd61467.json  workflow_2ac3de9a22dd.json  workflow_306ab7c89687.json  workflow_36485e79dd2d.json  workflow_3f1a3e76596e.json  workflow_48b2d5fe47d0.json  workflow_4a9282035bb1.json  workflow_4eb65a3327bc.json  workflow_4fb1b877c052.json  workflow_54d50af03450.json  workflow_5d65cc684679.json  workflow_5dc6fa45d0d4.json  workflow_6297176ad365.json  workflow_6a8abec92269.json  workflow_74e5d15ca23c.json  workflow_757c7d460966.json  workflow_761d3b2de957.json  workflow_7d0cb9dfc1cf.json  workflow_7fe7d3db90a7.json  workflow_8553d718599f.json  workflow_86f0178d46f6.json  workflow_8975594c14d5.json  workflow_8acb11af4690.json  workflow_8d2cf1beb568.json  workflow_91f4a3069ffa.json  workflow_93f13377b2af.json  workflow_99350f3680f2.json  (+27 more)
backend/app/: main.py
backend/scripts/: seed_db.py  (+2 more)
(+218 files in other folders)
