[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestrator-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Orchestrator SaaS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "redis>=5.0.7",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
